Regression: Crash on deleting shape key from Blender File view. #108407

Closed
opened 2023-05-30 07:34:57 +02:00 by Kent Davis · 10 comments

System Information
Operating system: macOS-13.5-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 575 1.2

Blender Version
Broken: version: 4.0.0, 3.2
Worked: 3.1

Caused by a71a513def

Short description of error
Outliner on Blender File when delete cause crash guide.

Exact steps for others to reproduce the error

  • Open attached file
  • Add shape key
  • Switch outliner to Blender file display mode
  • Expand Shape key
  • select key then delete it from context menu

https://imgur.com/r2jrCca

Youtube:
https://youtu.be/OlegeJrBbmE

My Dropbox file:
https://www.dropbox.com/s/tox5gol5rwo1d4v/Lola%20Bunny.zip?dl=0


First create new ticket I unable to paste picture this here.
I did drag there 250MB and (Remove) cause appear <html><head></head><html> please fix without <html> https://imgur.com/k5RFuuy

**System Information** Operating system: macOS-13.5-x86_64-i386-64bit 64 Bits Graphics card: Metal API AMD Radeon Pro 575 1.2 **Blender Version** Broken: version: 4.0.0, 3.2 Worked: 3.1 Caused by a71a513def202b119328035dbd68e86c2c47f7ac **Short description of error** Outliner on Blender File when delete cause crash guide. **Exact steps for others to reproduce the error** - Open attached file - Add shape key - Switch outliner to Blender file display mode - Expand Shape key - select `key` then delete it from context menu https://imgur.com/r2jrCca Youtube: https://youtu.be/OlegeJrBbmE My Dropbox file: https://www.dropbox.com/s/tox5gol5rwo1d4v/Lola%20Bunny.zip?dl=0 - - - First create new ticket I unable to paste picture this here. I did drag there 250MB and (Remove) cause appear <html><head></head><body></body><html> please fix without <html> https://imgur.com/k5RFuuy
Kent Davis added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-30 07:34:57 +02:00
Member

Hi, thanks for the report. Can confirm the crash (I'll check).

Hi, thanks for the report. Can confirm the crash (I'll check).
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-30 08:10:18 +02:00
Pratik Borhade self-assigned this 2023-05-30 08:10:28 +02:00
Author

Sure yw

Sure yw
Member

This is a regression but not a recent one (broke between 2887df119c - d3b1cce400).
Crash involves dependency graph so I'll resign myself from the assignee.
Will bisect to find the responsible commit.

This is a regression but not a recent one (broke between 2887df119c3b - d3b1cce4000b). Crash involves dependency graph so I'll resign myself from the assignee. Will bisect to find the responsible commit.
Pratik Borhade added the
Interest
Dependency Graph
label 2023-05-30 10:50:33 +02:00
Pratik Borhade removed their assignment 2023-05-30 10:53:51 +02:00
Member

Crash caused by: a71a513def
@Jeroen-Bakker ^

(Feel free to lower the priority)

Crash caused by: a71a513def202b119328035dbd68e86c2c47f7ac @Jeroen-Bakker ^ (Feel free to lower the priority)
Pratik Borhade changed title from Outliner on Blender File when delete cause crash guide. to Regression: Crash on deleting shape key from Blender File view. 2023-05-30 11:15:13 +02:00
Pratik Borhade added
Module
Core
Priority
High
and removed
Module
User Interface
Priority
Normal
labels 2023-05-30 11:18:14 +02:00
Member

I checked with @mont29 and we are going to lower the priority of this issue with the next considerations:

  • This issue is already there for more than a year.
  • The issue is using Shapekeys which is a difficult area to work in due to how shapekeys have been technically setup in the past (as an ID data-block). Changing can lead to undesired effects
  • Currently the core is being worked on and won't resemble how it currently works. After this refactor we can check how we can solve this issue.
I checked with @mont29 and we are going to lower the priority of this issue with the next considerations: - This issue is already there for more than a year. - The issue is using Shapekeys which is a difficult area to work in due to how shapekeys have been technically setup in the past (as an ID data-block). Changing can lead to undesired effects - Currently the core is being worked on and won't resemble how it currently works. After this refactor we can check how we can solve this issue.
Jeroen Bakker added
Priority
Normal
Type
Known Issue
and removed
Priority
High
Type
Report
labels 2023-05-30 14:52:37 +02:00
Author

@PratikPB2123
Yes thanks and thank you for change correct. I am not good english myself. I am full deaf and I know ASL as well.
Perfect yes you did great change correct.

@PratikPB2123 Yes thanks and thank you for change correct. I am not good english myself. I am full deaf and I know ASL as well. Perfect yes you did great change correct.
Member

Currently the core is being worked on and won't resemble how it currently works. After this refactor we can check how we can solve this issue.

Issue is still present in current main

@Jeroen-Bakker @mont29 : is this refactor still being worked on (this report still in consideration to be fixed)?

>Currently the core is being worked on and won't resemble how it currently works. After this refactor we can check how we can solve this issue. Issue is still present in current main @Jeroen-Bakker @mont29 : is this refactor still being worked on (this report still in consideration to be fixed)?
Author

@lichtwerk
There still crash.
https://youtu.be/3B5uGb35RuM
check @Jeroen-Bakker and @mont29
I do use Macintosh MacOS.

@lichtwerk There still crash. https://youtu.be/3B5uGb35RuM check @Jeroen-Bakker and @mont29 I do use Macintosh MacOS.
Member

I do use Macintosh MacOS.

I know by now :)

> I do use Macintosh MacOS. I know by now :)
Author

I do use Macintosh MacOS.

I know by now :)

Sure no problem.

> > I do use Macintosh MacOS. > > I know by now :) Sure no problem.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-13 12:58:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108407
No description provided.