Fix #108407: Crash on deleting shape key from Blender File view.

`BKE_library_id_can_use_filter_id` was missing the ShapeKey type for
geometry IDs (meshes, legacy curves, and lattices), leading to the
remapping code to fail to do its job when deleting the ShapeKey only.

Pull Request: https://projects.blender.org/blender/blender/pulls/118281